--- a/Input/config.yaml
+++ b/Input/config.yaml
@@ -1,5 +1,8 @@
 General: 
-  nTimesteps: 24 # number of timesteps 
+  nTimesteps: 24 # number of timesteps per representative day
+  nReprDays: 8 # days
+  nDays: 365 # days
+  nYears: 1 # years
   totConsumers: 1000000 # 1 million consumers
 
 ADMM:
